# Audio-Plugin

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  main.cpp  requirements.txt
prototype/: deprecated_shelf.ipynb  lowshelf-filter.ipynb  main.ipynb  main2.ipynb  pipeline.py  plot.py  shelving.py  streamlit_demo.py  utils.py  velvetnoise.ipynb  velvetnoise.py  vnf.ipynb
src/: AudioPluginProcessor.cpp  AudioPluginProcessor.h  AudioPluginProcessorEditor.cpp  AudioPluginProcessorEditor.h  InfoDisplayBox.cpp  InfoDisplayBox.h  MainApplication.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dlog.cpp
src/components/: DebugLoggerComponent.cpp  DebugLoggerComponent.h  InfoDisplayBox.cpp  InfoDisplayBox.h
src/processors/: BaseAudioProcessor.cpp  LowShelfFilter.cpp  LowShelfFilter.h  VelvetNoiseFilter.cpp  VelvetNoiseFilter.h
tests/: CMakeLists.txt  SampleUnitTests.cpp
